--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,39 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title>δοκιμαστικό</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>Module2 Asignment</title>
+	<link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
-<H1> Δοκιμαστικό</H1>
+    <h1>Our Menu</h1>
+
+    <div class="col-lg-4 col-md-6 col-sm-12">
+
+    <div class="section">
+    	<h2 class="chicken">Chicken</h2>
+    	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur cursus in odio pharetra porta. Mauris iaculis turpis ut ex aliquet, at pellentesque ipsum facilisis. Fusce at metus ut mi mattis maximus. Praesent rutrum turpis eu mi varius, nec viverra nunc congue. Morbi mauris tellus, ultrices at faucibus et, fermentum vitae lacus. Nam nec ligula a enim pharetra volutpat. Quisque dui neque, eleifend vel suscipit sit amet, porttitor in arcu.</p>
+    </div>
+</div>
+
+<div class="col-lg-4 col-md-6 col-sm-12">
+	<div class="section">
+		<h2 class="beef">Beef</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur cursus in odio pharetra porta. Mauris iaculis turpis ut ex aliquet, at pellentesque ipsum facilisis. Fusce at metus ut mi mattis maximus. Praesent rutrum turpis eu mi varius, nec viverra nunc congue. Morbi mauris tellus, ultrices at faucibus et, fermentum vitae lacus. Nam nec ligula a enim pharetra volutpat. Quisque dui neque, eleifend vel suscipit sit amet, porttitor in arcu.</p>
+	</div>
+</div>
+
+<div class="col-lg-4 col-md-12 col-sm-12">
+	<div class="section">
+		<h2 class="sushi">Sushi</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur cursus in odio pharetra porta. Mauris iaculis turpis ut ex aliquet, at pellentesque ipsum facilisis. Fusce at metus ut mi mattis maximus. Praesent rutrum turpis eu mi varius, nec viverra nunc congue. Morbi mauris tellus, ultrices at faucibus et, fermentum vitae lacus. Nam nec ligula a enim pharetra volutpat. Quisque dui neque, eleifend vel suscipit sit amet, porttitor in arcu.</p>
+	</div>
+</div>
+
 </body>
 </html>
